---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1080                                 -
---------------------------------------------
- 2021-02-24                                -
---------------------------------------------
.: WSM: Task - Adding invoice tracking dot (WSM-305)

- v1.0.1070                                 -
---------------------------------------------
- 2021-02-06                                -
---------------------------------------------
.: WSW: BugFix: Timezone causes tracking not recorded issue (WSW-104)

---------------------------------------------
- 2021-01-31                                -
---------------------------------------------
.: WSW: Task: Update "isPaid" to "paidAt" (WSW-103)

---------------------------------------------
- 2021-01-18                                -
---------------------------------------------
.: WSW: Task: Preview uploaded pasyslip and display confirmation (WSW-103)

- v1.0.1061                                 -
---------------------------------------------
- 2021-01-08                                -
---------------------------------------------
.: WSW: BugFix: When store is under maintenance, add the message (WSW-101)
.: WSW: BugFix: Header overflow issue (WSW-102)

---------------------------------------------
- 2021-01-06                                -
---------------------------------------------
.: WSM: BugFix: Social media editor not shown in mobile size (WSM-268)
.: WSM: Task: Able to not enter ETA time if not confirmed yet (WSM-277)

- v1.0.1060                                 -
---------------------------------------------
- 2021-01-03                                -
---------------------------------------------
.: WSM: Task: Update currencyService (WSW-94)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------