@@ -7,6 +7,7 @@
 - 2021-02-24                                -
 ---------------------------------------------
 .: WSM: Task - Adding invoice tracking dot (WSM-305)
+.: WSM: Task - Update Invoice UI in mobile (WSM-307)
 
 - v1.0.1070                                 -
 ---------------------------------------------
